--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
                             <h1 class="form-title">Add New Book</h1>
                             <form action="" class="book-form">
                                 <div class="form-input">
-                                    <label for="title">Title: </label>
-                                    <input type="text" name="book_title" id="title" class="user-input" maxlength="50" required>
+                                    <label for="title">Title<span class="required-input">* </span>: </label>
+                                    <input type="text" name="book_title" id="title" class="user-input input-with-validation" maxlength="50" required>
                                 </div>
                                 <div class="form-input">
-                                    <label for="author">Author: </label>
-                                    <input type="text" name="book_author" id="author" class="user-input" required>
+                                    <label for="author">Author<span class="required-input">* </span>: </label>
+                                    <input type="text" name="book_author" id="author" class="user-input input-with-validation" maxlength="50" required>
                                 </div>
                                 <div class="form-input">
-                                    <label for="pages"># of pages: </label>
-                                    <input type="number" name="book_pages" id="pages" class="user-input" required>
+                                    <label for="pages"># of pages<span class="required-input">* </span>: </label>
+                                    <input type="number" name="book_pages" id="pages" class="user-input input-with-validation" min="0" max="9999" required>
                                 </div>
                                 <div class="form-input">
                                     <label for="read">Completed? </label>
